@@ -175,6 +175,68 @@ sub write_text_description_block {
 
 }
 
+sub write_message_block {
+
+  my( $text, $time ) = @_;
+
+  write_byte( 0x31 );
+  write_byte( $time );
+  write_byte( length $text );
+  print $text;
+
+}
+
+sub write_archive_info_block {
+
+  my( @strings ) = @_;
+
+  write_byte( 0x32 );
+
+  my $data;
+
+  foreach my $string ( @strings ) {
+    $data .= chr( $string->{id} );
+    $data .= chr( length $string->{text} );
+    $data .= $string->{text};
+  }
+
+  write_word( length $data );
+  write_byte( scalar @strings );
+  print $data;
+
+}
+
+sub write_hardware_type_block {
+
+  my( @info ) = @_;
+
+  write_byte( 0x33 );
+  write_byte( scalar @info );
+
+  foreach my $info ( @info ) {
+    write_byte( $info->{type} );
+    write_byte( $info->{id} );
+    write_byte( $info->{used} );
+  }
+}
+
+sub write_custom_info_block {
+
+  my( $id, $data ) = @_;
+
+  write_byte( 0x35 );
+
+  if( length $id < 16 ) {
+    $id .= ' ' x ( 16 - length $id );
+  } elsif( length $id > 16 ) {
+    $id = substr( $id, 0, 16 );
+  }
+  print $id;
+  write_dword( length $data );
+  print $data;
+
+}
+
 write_header();
 
 write_standard_speed_data_block( "\xaa", 2345 );
@@ -207,3 +269,15 @@ write_loop_end_block();
 write_stop_tape_if_in_48k_mode_block();
 
 write_text_description_block( "Comment here" );
+
+write_message_block( "A message", 1 );
+
+write_archive_info_block( { id => 0x00, text => "Full title" },
+			  { id => 0x03, text => "Year"       } );
+
+write_hardware_type_block( { type => 0x00, id => 0x01, used => 0x00 },
+			   { type => 0x02, id => 0x02, used => 0x03 } );
+
+write_custom_info_block( "Complete TZX", "Arbitrary custom data" );
+
+write_pure_tone_block( 820, 941 );
