@@ -533,3 +533,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20070926 test/{complete-tzx.pl,edges.c,test15.c}: add more block types to
 	 the full TZX test.
 20070926 test/test.c: factor out common code.
+20070927 test/{complete-tzx.pl,test15.c}: and more block types to the full
+	 TZX test.
